change color scheme

--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
 ******************/
 
 :root {
-  --headerBG: #fed7aa;
-  --mainBg: #d1fae5;
-  --formBG: #fed7aa;
-  --bgButton: #a3a3a3;
+  --headerBG: #675D50;
+  --mainBg: #F3DEBA;
+  --formBG: #A9907E;
+  --bgButton: #ABC4AA;
   --colorButton: red;
   --padS: 0.5rem;
   --padM: 1rem;
