--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 * {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -159,9 +159,9 @@ form input {
 
 .card {
   width: 200px;
-  /* height: 250px; */
   position: relative;
   background-color: var(--formBG);
+  color: black;
 }
 
 .card > p {
@@ -196,7 +196,6 @@ form input {
 }
 
 .card > p:nth-child(4) {
-  /* color: red; */
   cursor: pointer;
 }
 
@@ -205,13 +204,37 @@ form input {
   font-weight: 700;
 }
 
-.card > p:nth-child(5) {
+.indexNo {
   color: blue;
   position: absolute;
-  width: 20px;
-  height: 20px;
-  bottom: 2px;
+  top: 2px;
   right: 2px;
+}
+
+/******************
+***Delete button***
+******************/
+
+.delete {
+  display: block;
+  padding: var(--padS);
+  margin: 5px auto;
+  width: 60%;
+  border-radius: 5px;
+  background-color: var(--bgButton);
+  color: var(--colorButton);
+  cursor: pointer;
+}
+
+.delete:hover {
+  opacity: 0.5;
+  outline: 2px solid green;
+  transition-duration: 0.3s;
+}
+
+.delete:active {
+  box-shadow: 0 2px #666;
+  transform: translateY(3px);
 }
 
 /************************
